# viking-firmware

./: Cargo.toml  README.md  build.rs  memory.x  rust-toolchain.toml
.cargo/: config  config.toml
.github/workflows/: rust.yml
board/rp2040-pico/: Cargo.toml  README.md  build.rs  main.rs  memory.x  rp
board/rp2040-pico/.cargo/: config.toml
board/rp2350-pico2/: Cargo.toml  README.md  build.rs  common  main.rs  memory.x
board/rp2350-pico2/.cargo/: config.toml
board/samd11-seahorse/: Cargo.toml  main.rs  memory.x  sam0
board/samd11-seahorse/.cargo/: config.toml
board/samd21-arduino-zero/: Cargo.toml  README.md  main.rs  memory.x
board/samd21-arduino-zero/.cargo/: config.toml
board/samd21-xplained/: Cargo.toml  README.md  main.rs
board/samd21-xplained/.cargo/: config.toml
common/: Cargo.toml  buf.rs  lib.rs  usb_descriptors.rs
common/common/: buf.rs  mod.rs  resources.rs  usb.rs
common/rp/: gpio.rs  i2c.rs  mod.rs  spi.rs
common/sam0/: gpio.rs  i2c.rs  mod.rs  sercom.rs  spi.rs
src/: delay.rs  main.rs  onewire.rs  pin.rs  viking.rs
src/board/: mod.rs
src/board/rp2040-pico/: rp2040-pico.rs
src/board/samd11-seahorse/: samd11-seahorse.rs
src/board/samd21-xplained/: samd21-xplained.rs
src/chip/rp/: gpio.rs  mod.rs
src/chip/sam0/: gpio.rs  i2c.rs  mod.rs  sercom.rs  spi.rs
src/usb/: descriptors.rs  hardware.rs  mod.rs
src/viking_sam0/: gpio.rs  i2c.rs  mod.rs  pin.rs  sercom.rs  spi.rs
xtask/: Cargo.toml  main.rs
