[package]
name = "viking-firmware"
version = "0.1.0"
license = "MIT OR Apache-2.0"
edition = "2021"

[dependencies.cortex-m-rt]
version = "0.7"

[dependencies.cortex-m]
version = "0.7"
features = ["critical-section-single-core", "inline-asm"]

[dependencies.zeptos]
path = "../zeptos"

[dependencies.usb]
git = "https://github.com/kevinmehall/rust-usb.git"
rev = "cb0599102313de79d34d4be4bb37f2c25e480ba6"

[dependencies]
defmt = "0.3.6"
defmt-rtt = "0.4.0"
futures-util = { version = "0.3.30", default-features = false, features = ["async-await", "async-await-macro"] }
panic-probe = { version = "0.3" }
pin-project-lite = "0.2.14"
scopeguard = { version = "1.2.0", default_features = false }
viking-protocol = { path = "../viking/viking-protocol" }

[features]
board-samd21-xplained = ["zeptos/samd21", "zeptos/samd-clock-48m-usb", "zeptos/usb"]
board-rp2040-pico = ["zeptos/rp2040", "zeptos/rp2040-boot2-w25q080", "zeptos/usb"]

[profile.dev]
incremental = false
codegen-units = 1
lto = true
opt-level = "z"

[profile.release]
debug = true
codegen-units = 1
lto = true
opt-level = "z"
