[workspace]
members = ["common", "board/*"]
resolver = "3"

[workspace.dependencies]
cortex-m-rt = "0.7"
cortex-m = { version = "0.7" }
defmt = "0.3.6"
defmt-rtt = "0.4.0"
futures-util = { version = "0.3.30", default-features = false, features = ["async-await", "async-await-macro"] }
panic-probe = { version = "0.3" }
pin-project-lite = "0.2.14"
scopeguard = { version = "1.2.0", default-features = false }
viking-protocol = { path = "../viking/viking-protocol" }
usb = "0.3"
zeptos = { path = "../zeptos" }
viking-firmware-common = { path = "common" }

[profile.dev]
incremental = false
codegen-units = 1
lto = true
opt-level = "z"

[profile.release]
debug = true
codegen-units = 1
lto = true
opt-level = "z"
