[package]
name = "viking-firmware-common"
version = "0.1.0"
license = "MIT OR Apache-2.0"
edition = "2024"

[dependencies]
cortex-m-rt = "0.7"
cortex-m = { version = "0.7", features = ["critical-section-single-core", "inline-asm"] }
defmt = "0.3.6"
defmt-rtt = "0.4.0"
futures-util = { version = "0.3.30", default-features = false, features = ["async-await", "async-await-macro"] }
panic-probe = { version = "0.3" }
pin-project-lite = "0.2.14"
scopeguard = { version = "1.2.0", default-features = false }
viking-protocol = "0.1"
usb = "0.3"
zeptos = { version = "0.1", features = ["usb"] }

[features]
samd11 = ["zeptos/samd11"]
samd21 = ["zeptos/samd21"]
rp2040 = ["zeptos/rp2040"]

[lib]
path = "lib.rs"