[package]
name = "viking-firmware-rp2040-pico"
version = "0.1.0"
license = "MIT OR Apache-2.0"
edition = "2024"

[dependencies]
cortex-m-rt = { workspace = true }
cortex-m = { workspace = true, features = ["critical-section-single-core", "inline-asm"] }
defmt = { workspace = true }
defmt-rtt = { workspace = true }
futures-util = { workspace = true, default-features = false, features = ["async-await", "async-await-macro"] }
panic-probe = { workspace = true }
pin-project-lite = { workspace = true }
scopeguard = { workspace = true, default_features = false }
viking-protocol = { workspace = true }
usb = { workspace = true }
zeptos = { workspace = true, features = ["rp2040", "usb", "rp2040-boot2-w25q080"] }
viking-firmware-common = { workspace = true, features = ["rp2040"] }

[[bin]]
name = "viking-firmware-rp2040-pico"
path = "main.rs"