[package]
name = "viking-firmware-rp2040-pico"
version = "0.1.0"
license = "MIT OR Apache-2.0"
edition = "2024"

[dependencies]
cortex-m-rt = "0.7"
zeptos = { version = "0.1", features = ["rp2040", "usb", "rp2040-boot2-w25q080"] }
viking-firmware-common = { path = "../../common", features = ["rp2040"] }
defmt = "1.0.1"

[[bin]]
name = "viking-firmware-rp2040-pico"
path = "main.rs"

[profile.dev]
incremental = false
codegen-units = 1
lto = true
opt-level = "z"

[profile.release]
debug = true
codegen-units = 1
lto = true
opt-level = "z"