[package]
name = "viking-firmware-rp2350-pico2"
version = "0.1.0"
license = "MIT OR Apache-2.0"
edition = "2024"

[dependencies]
cortex-m = { version = "0.7", features = ["critical-section-single-core", "inline-asm"] }
cortex-m-rt = "0.7"
zeptos = { version = "0.1", features = ["rp2350", "usb", "time", "gpio-interrupts", "i2c0", "i2c1"] }
defmt = "1.0.1"
defmt-rtt = "1.0.0"
futures-util = { version = "0.3.30", default-features = false, features = ["async-await", "async-await-macro"] }
panic-probe = { version = "1.0" }
viking-protocol = "0.1"
usb = "0.3"

[[bin]]
name = "viking-firmware-rp2350-pico2"
path = "main.rs"
test = false
doctest = false
bench = false

[profile.dev]
incremental = false
codegen-units = 1
lto = true
opt-level = "z"

[profile.release]
debug = true
codegen-units = 1
lto = true
opt-level = "z"
