[package]
name = "viking-firmware-samd11-seahorse"
version = "0.1.0"
license = "MIT OR Apache-2.0"
edition = "2024"

[dependencies]
cortex-m = { version = "0.7", features = ["critical-section-single-core", "inline-asm"] }
cortex-m-rt = "0.7"
zeptos = { version = "0.1", features = ["samd11", "usb", "time", "sercom0", "sercom1", "samd-clock-48m-usb"] }
defmt = "1.0.1"
defmt-rtt = "1.0.0"
futures-util = { version = "0.3.30", default-features = false, features = ["async-await", "async-await-macro"] }
panic-probe = { version = "1.0" }
viking-protocol = "0.1"
zerocopy = "0.8.6"
usb = "0.3"
scopeguard = { version = "1.2.0", default-features = false }

[[bin]]
name = "viking-firmware-samd11-seahorse"
path = "main.rs"
test = false
doctest = false
bench = false

[profile.dev]
incremental = false
codegen-units = 1
lto = true
opt-level = "s"

[profile.release]
debug = true
codegen-units = 1
lto = true
opt-level = "s"
