[package]
name = "viking-firmware-samd21-xplained"
version = "0.1.0"
license = "MIT OR Apache-2.0"
edition = "2024"

[dependencies]
cortex-m-rt = "0.7"
cortex-m = { version = "0.7", features = ["critical-section-single-core", "inline-asm"] }
zeptos = { version = "0.1", features = ["samd21", "usb", "samd-clock-48m-usb"]  }
viking-firmware-common = { path = "../../common", features = ["samd21"] }
defmt = "1.0.1"

[[bin]]
name = "viking-firmware-samd21-xplained"
path = "main.rs"
test = false
doctest = false
bench = false

[profile.dev]
incremental = false
codegen-units = 1
lto = true
opt-level = "z"

[profile.release]
debug = true
codegen-units = 1
lto = true
opt-level = "z"
